Added settings page, test email works
Settings URL works based on unique project key. Email render by template
still has to be built.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -21,6 +21,12 @@ input {
    padding: 4px;
 }
 
+select {
+   padding-top: 4px;
+   padding-bottom: 4px;
+   padding-right: 4px;
+}
+
 .highlight:hover {
   background-color: #E6E8FA;
 }
