--- a/templates/setup1.html
+++ b/templates/setup1.html
@@ -26,7 +26,7 @@ $(function() {
 
             if(i == 10) {
                 addDiv.hide();
-                $('div#notification').append($('<div id="max"><p><img src="/images/info-icon.png" width="17px" style="margin-right:10px" />You have reached the maximum size</p></div>'));
+                $('div#notification').append($('<div id="max"><p><img src="/images/info-icon.png" width="17px" style="margin-right:10px" />You have reached the maximum team size</p></div>'));
                 $('div#notification').attr('style', '250px');
             }
             i++;
